--- a/Diff/Diff/Base.lproj/Main.storyboard
+++ b/Diff/Diff/Base.lproj/Main.storyboard
@@ -76,6 +76,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="3Q7-jp-cWD" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Tas-I8-mbY">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
